Add a core deepEqual function (#1018)
* Add a core deepEqual function

* Add tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -110,6 +110,7 @@
                 "escapeRegExp": "readonly",
                 "deferPromise": "readonly",
                 "clone": "readonly",
+                "deepEqual": "readonly",
                 "generateId": "readonly",
                 "promiseAnimationFrame": "readonly",
                 "DynamicProperty": "readonly",
