Build dry run test (#1129)
* Update testMain to support function args

* Add support for dry run and basic validation

* Don't log progress if not a TTY

* Ignore errors from fs.unlinkSync

* Add --dry-run-build-zip option to build zip in memory

* Add test-build

--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     },
     "scripts": {
         "build": "node ./dev/build.js",
-        "test": "npm run test-lint && npm run test-code && npm run test-manifest",
+        "test": "npm run test-lint && npm run test-code && npm run test-manifest && npm run test-build",
         "test-lint": "eslint . && node ./dev/lint/global-declarations.js && node ./dev/lint/html-scripts.js",
         "test-lint-web-ext": "npx web-ext lint",
         "test-code": "node ./test/test-all.js ./test --skip ./test/test-manifest.js",
-        "test-manifest": "node ./test/test-manifest.js"
+        "test-manifest": "node ./test/test-manifest.js",
+        "test-build": "node ./dev/build.js --dry-run --all"
     },
     "repository": {
         "type": "git",
