--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     },
     "scripts": {
         "build": "node ./dev/build.js",
-        "test": "npm run test-lint && npm run test-code && npm run test-manifest && npm run test-build",
+        "test": "npm run test-lint && npm run test-lint-css && npm run test-code && npm run test-manifest && npm run test-build",
         "test-lint": "eslint . && node ./dev/lint/global-declarations.js && node ./dev/lint/html-scripts.js",
+        "test-lint-css": "npx stylelint \"**/*.css\"",
         "test-lint-web-ext": "npx web-ext lint",
         "test-code": "node ./test/test-all.js ./test --skip ./test/test-manifest.js",
         "test-manifest": "node ./test/test-manifest.js",
@@ -40,6 +41,8 @@
         "fake-indexeddb": "^3.1.2",
         "jsdom": "^16.4.0",
         "parse5": "^6.0.1",
+        "stylelint": "^13.8.0",
+        "stylelint-config-recommended": "^3.0.0",
         "web-ext": "^5.4.1"
     }
 }
