Anki note data abstraction (#1228)
* Create AnkiNoteData

* Create AnkiNoteDataDefinitionProxyHandler

* Update media injection

* Create AnkiNoteDataDefinitionSecondaryProperties

* Update note context format

* Expose url and cloze on definition

* Simplify for understandability

* Remove unused _createNoteData

* Update public object

* Remove trims on sentence, since it should already be trimmed

* Fix unused global

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -96,6 +96,7 @@
             "excludedFiles": [
                 "ext/mixed/js/core.js",
                 "ext/bg/js/template-renderer.js",
+                "ext/bg/js/anki-note-data.js",
                 "ext/mixed/js/dictionary-data-util.js"
             ],
             "globals": {
