--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -46,6 +46,7 @@
                 "mixed/js/frame-client.js",
                 "mixed/js/text-scanner.js",
                 "mixed/js/document-util.js",
+                "mixed/js/hotkey-handler.js",
                 "fg/js/dom-text-scanner.js",
                 "fg/js/popup.js",
                 "fg/js/text-source-range.js",
