--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "build": "node ./dev/build.js",
         "test": "npm run test-lint && npm run test-lint-css && npm run test-code && npm run test-manifest && npm run test-build",
-        "test-lint": "eslint . && node ./dev/lint/global-declarations.js && node ./dev/lint/html-scripts.js",
+        "test-lint": "npx eslint . && node ./dev/lint/global-declarations.js && node ./dev/lint/html-scripts.js",
         "test-lint-css": "npx stylelint \"**/*.css\"",
         "test-lint-web-ext": "npx web-ext lint",
         "test-code": "node ./test/test-all.js ./test --skip ./test/test-manifest.js",
@@ -19,7 +19,6 @@
         "type": "git",
         "url": "git+https://github.com/FooSoft/yomichan.git"
     },
-    "author": "FooSoft",
     "license": "GPL-3.0-or-later",
     "licenses": [
         {
