--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,10 @@ jobs:
       run: npm run test-lint-css
       env:
         CI: true
+    - name: Lint HTML
+      run: npm run test-lint-html
+      env:
+        CI: true
     - name: Tests
       run: npm run test-code
       env:
