--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     },
     "scripts": {
         "build": "node ./dev/build.js",
-        "test": "npm run test-lint && npm run test-lint-css && npm run test-code && npm run test-manifest && npm run test-build",
+        "test": "npm run test-lint && npm run test-lint-css && npm run test-lint-html && npm run test-code && npm run test-manifest && npm run test-build",
         "test-lint": "npx eslint . && node ./dev/lint/global-declarations.js && node ./dev/lint/html-scripts.js",
-        "test-lint-css": "npx stylelint \"**/*.css\"",
+        "test-lint-css": "npx stylelint \"ext/**/*.css\" \"test/**/*.css\" \"dev/**/*.css\"",
+        "test-lint-html": "npx html-validate \"ext/**/*.html\" \"test/**/*.html\" \"dev/**/*.html\"",
         "test-lint-web-ext": "npx web-ext lint",
         "test-code": "node ./test/test-all.js ./test --skip ./test/test-manifest.js",
         "test-manifest": "node ./test/test-manifest.js",
@@ -38,6 +39,7 @@
         "eslint": "^7.15.0",
         "eslint-plugin-no-unsanitized": "^3.1.4",
         "fake-indexeddb": "^3.1.2",
+        "html-validate": "^4.3.0",
         "jsdom": "^16.4.0",
         "parse5": "^6.0.1",
         "stylelint": "^13.8.0",
