Native messaging optional permission (#1348)
* Refactor PermissionsToggleController to not require a setting

* Update nativeMessaging to be optional on Chrome

* Update parsing.enableMecabParser setting to request permissions

* Update permissions page to use PermissionsToggleController

* Update permissions documentation

* Disable toggle for permissions which are not optional

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -78,12 +78,12 @@
         "storage",
         "clipboardWrite",
         "unlimitedStorage",
-        "nativeMessaging",
         "webRequest",
         "webRequestBlocking"
     ],
     "optional_permissions": [
-        "clipboardRead"
+        "clipboardRead",
+        "nativeMessaging"
     ],
     "commands": {
         "toggleTextScanning": {
