Permissions button in browser action popup (#1368)
* Add key icon

* Update context icon styles

* Add permissions links

* Show warning badge if permissions are insufficient for certain settings

* Create PermissionsUtil

* Use PermissionsUtil in Backend

* Update SettingsController to use PermissionsUtil

* Update AnkiController to use getRequiredPermissionsForAnkiFieldValue

* Show the permissions buttons/links on the context page when necessary

* Update MV3 compatibility

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -176,6 +176,7 @@
                 "ext/bg/js/mecab.js",
                 "ext/bg/js/media-utility.js",
                 "ext/bg/js/options.js",
+                "ext/bg/js/permissions-util.js",
                 "ext/bg/js/profile-conditions.js",
                 "ext/bg/js/request-builder.js",
                 "ext/bg/js/simple-dom-parser.js",
