--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -5,23 +5,23 @@
     "description": "Japanese dictionary with Anki integration",
     "author": "Alex Yatskov",
     "icons": {
-        "16": "mixed/img/icon16.png",
-        "19": "mixed/img/icon19.png",
-        "32": "mixed/img/icon32.png",
-        "38": "mixed/img/icon38.png",
-        "48": "mixed/img/icon48.png",
-        "64": "mixed/img/icon64.png",
-        "128": "mixed/img/icon128.png"
+        "16": "images/icon16.png",
+        "19": "images/icon19.png",
+        "32": "images/icon32.png",
+        "38": "images/icon38.png",
+        "48": "images/icon48.png",
+        "64": "images/icon64.png",
+        "128": "images/icon128.png"
     },
     "browser_action": {
         "default_icon": {
-            "16": "mixed/img/icon16.png",
-            "19": "mixed/img/icon19.png",
-            "32": "mixed/img/icon32.png",
-            "38": "mixed/img/icon38.png",
-            "48": "mixed/img/icon48.png",
-            "64": "mixed/img/icon64.png",
-            "128": "mixed/img/icon128.png"
+            "16": "images/icon16.png",
+            "19": "images/icon19.png",
+            "32": "images/icon32.png",
+            "38": "images/icon38.png",
+            "48": "images/icon48.png",
+            "64": "images/icon64.png",
+            "128": "images/icon128.png"
         },
         "default_title": "Yomichan",
         "default_popup": "bg/context.html"
