Rename html files (#1377)
* Rename context.html to action-popup.html

* Rename float.html to popup.html

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -24,7 +24,7 @@
             "128": "images/icon128.png"
         },
         "default_title": "Yomichan",
-        "default_popup": "context.html"
+        "default_popup": "action-popup.html"
     },
     "background": {
         "page": "background.html",
@@ -110,7 +110,7 @@
         }
     },
     "web_accessible_resources": [
-        "float.html",
+        "popup.html",
         "template-renderer.html"
     ],
     "content_security_policy": "default-src 'self'; style-src 'self' 'unsafe-inline'; media-src *; connect-src *"
