Move mixed/js (#1383)
* Move mixed/js/core.js to js/core.js

* Move mixed/js/yomichan.js to js/yomichan.js

* Move mixed/js/timer.js to js/debug/timer.js

* Move mixed/js/hotkey-handler.js to js/input/hotkey-handler.js

* Move mixed/js/hotkey-help-controller.js to js/input/hotkey-help-controller.js

* Move mixed/js/hotkey-util.js to js/input/hotkey-util.js

* Move mixed/js/audio-system.js to js/input/audio-system.js

* Move mixed/js/media-loader.js to js/input/media-loader.js

* Move mixed/js/text-to-speech-audio.js to js/input/text-to-speech-audio.js

* Move mixed/js/comm.js to js/comm/cross-frame-api.js

* Move mixed/js/api.js to js/comm/api.js

* Move mixed/js/frame-client.js to js/comm/frame-client.js

* Move mixed/js/frame-endpoint.js to js/comm/frame-endpoint.js

* Move mixed/js/display.js to js/display/display.js

* Move mixed/js/display-audio.js to js/display/display-audio.js

* Move mixed/js/display-generator.js to js/display/display-generator.js

* Move mixed/js/display-history.js to js/display/display-history.js

* Move mixed/js/display-notification.js to js/display/display-notification.js

* Move mixed/js/display-profile-selection.js to js/display/display-profile-selection.js

* Move mixed/js/japanese.js to js/language/japanese-util.js

* Move mixed/js/dictionary-data-util.js to js/language/dictionary-data-util.js

* Move mixed/js/document-focus-controller.js to js/dom/document-focus-controller.js

* Move mixed/js/document-util.js to js/dom/document-util.js

* Move mixed/js/dom-data-binder.js to js/dom/dom-data-binder.js

* Move mixed/js/html-template-collection.js to js/dom/html-template-collection.js

* Move mixed/js/panel-element.js to js/dom/panel-element.js

* Move mixed/js/popup-menu.js to js/dom/popup-menu.js

* Move mixed/js/selector-observer.js to js/dom/selector-observer.js

* Move mixed/js/scroll.js to js/dom/window-scroll.js

* Move mixed/js/text-scanner.js to js/language/text-scanner.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -84,9 +84,9 @@
     "overrides": [
         {
             "files": [
-                "ext/mixed/js/core.js",
+                "ext/js/core.js",
                 "ext/bg/js/template-renderer.js",
-                "ext/mixed/js/dictionary-data-util.js"
+                "ext/js/language/dictionary-data-util.js"
             ],
             "env": {
                 "webextensions": false
@@ -95,10 +95,10 @@
         {
             "files": ["ext/**/*.js"],
             "excludedFiles": [
-                "ext/mixed/js/core.js",
+                "ext/js/core.js",
                 "ext/bg/js/template-renderer.js",
                 "ext/bg/js/anki-note-data.js",
-                "ext/mixed/js/dictionary-data-util.js"
+                "ext/js/language/dictionary-data-util.js"
             ],
             "globals": {
                 "serializeError": "readonly",
@@ -120,15 +120,15 @@
         {
             "files": ["ext/**/*.js"],
             "excludedFiles": [
-                "ext/mixed/js/core.js",
-                "ext/mixed/js/yomichan.js"
+                "ext/js/core.js",
+                "ext/js/yomichan.js"
             ],
             "globals": {
                 "yomichan": "readonly"
             }
         },
         {
-            "files": ["ext/mixed/js/yomichan.js"],
+            "files": ["ext/js/yomichan.js"],
             "globals": {
                 "chrome": "writable"
             }
@@ -158,13 +158,13 @@
         },
         {
             "files": [
-                "ext/mixed/js/core.js",
-                "ext/mixed/js/yomichan.js",
-                "ext/mixed/js/environment.js",
-                "ext/mixed/js/japanese.js",
-                "ext/mixed/js/cache-map.js",
-                "ext/mixed/js/dictionary-data-util.js",
-                "ext/mixed/js/object-property-accessor.js",
+                "ext/js/core.js",
+                "ext/js/yomichan.js",
+                "ext/js/background/environment.js",
+                "ext/js/language/japanese-util.js",
+                "ext/js/general/cache-map.js",
+                "ext/js/language/dictionary-data-util.js",
+                "ext/js/general/object-property-accessor.js",
                 "ext/bg/js/anki.js",
                 "ext/bg/js/audio-downloader.js",
                 "ext/bg/js/clipboard-monitor.js",
