Move fg/js (#1384)
* Move fg/js/frame-ancestry-handler.js to js/comm/frame-ancestry-handler.js

* Move fg/js/frame-offset-forwarder.js to js/comm/frame-offset-forwarder.js

* Move fg/js/dom-text-scanner.js to js/dom/dom-text-scanner.js

* Move fg/js/text-source-element.js to js/dom/text-source-element.js

* Move fg/js/text-source-range.js to js/dom/text-source-range.js

* Move fg/js/float-main.js to js/display/popup-main.js

* Move fg/js/content-script-main.js to js/app/content-script-main.js

* Move fg/js/frontend.js to js/app/frontend.js

* Move fg/js/popup-factory.js to js/app/popup-factory.js

* Move fg/js/popup-proxy.js to js/app/popup-proxy.js

* Move fg/js/popup-window.js to js/app/popup-window.js

* Move fg/js/popup.js to js/app/popup.js

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -47,17 +47,17 @@
                 "js/language/text-scanner.js",
                 "js/dom/document-util.js",
                 "js/input/hotkey-handler.js",
-                "fg/js/dom-text-scanner.js",
-                "fg/js/popup.js",
-                "fg/js/text-source-range.js",
-                "fg/js/text-source-element.js",
-                "fg/js/popup-factory.js",
-                "fg/js/frame-ancestry-handler.js",
-                "fg/js/frame-offset-forwarder.js",
-                "fg/js/popup-proxy.js",
-                "fg/js/popup-window.js",
-                "fg/js/frontend.js",
-                "fg/js/content-script-main.js"
+                "js/dom/dom-text-scanner.js",
+                "js/app/popup.js",
+                "js/dom/text-source-range.js",
+                "js/dom/text-source-element.js",
+                "js/app/popup-factory.js",
+                "js/comm/frame-ancestry-handler.js",
+                "js/comm/frame-offset-forwarder.js",
+                "js/app/popup-proxy.js",
+                "js/app/popup-window.js",
+                "js/app/frontend.js",
+                "js/app/content-script-main.js"
             ],
             "match_about_blank": true,
             "all_frames": true
