Move bg/js/settings(2) (#1385)
* Move bg/js/settings/ to js/settings/

* Move bg/js/settings2/ to js/settings/

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -134,7 +134,7 @@
             }
         },
         {
-            "files": ["ext/bg/js/settings/*.js"],
+            "files": ["ext/js/settings/*.js"],
             "env": {
                 "jquery": true
             }
