--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -173,10 +173,10 @@
                 "ext/js/language/dictionary-database.js",
                 "ext/js/data/json-schema.js",
                 "ext/js/comm/mecab.js",
-                "ext/js/media/media-utility.js",
+                "ext/js/media/media-util.js",
                 "ext/js/data/options-util.js",
                 "ext/js/data/permissions-util.js",
-                "ext/js/background/profile-conditions.js",
+                "ext/js/background/profile-conditions-util.js",
                 "ext/js/background/request-builder.js",
                 "ext/js/dom/simple-dom-parser.js",
                 "ext/js/templates/template-patcher.js",
