Cleanup yomichan api (#1394)
* Move invokeMessageHandler to core.js

* Move getMessageResponseResult to backghend.js

* Replace getTemporaryListenerResult

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -111,6 +111,7 @@
                 "deepEqual": "readonly",
                 "generateId": "readonly",
                 "promiseAnimationFrame": "readonly",
+                "invokeMessageHandler": "readonly",
                 "log": "readonly",
                 "DynamicProperty": "readonly",
                 "EventDispatcher": "readonly",
