--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,10 @@
         "es2017": true,
         "webextensions": true
     },
-    "plugins": ["no-unsanitized"],
+    "plugins": [
+        "no-unsanitized",
+        "header"
+    ],
     "ignorePatterns": [
         "/ext/lib/"
     ],
@@ -82,7 +85,26 @@
         "template-tag-spacing": ["error", "never"],
 
         "no-unsanitized/method": "error",
-        "no-unsanitized/property": "error"
+        "no-unsanitized/property": "error",
+
+        "header/header": ["error", "block", [
+            "",
+            {"pattern": " \\* Copyright \\(C\\) (\\d+-)?2021  Yomichan Authors"},
+            " *",
+            " * This program is free software: you can redistribute it and/or modify",
+            " * it under the terms of the GNU General Public License as published by",
+            " * the Free Software Foundation, either version 3 of the License, or",
+            " * (at your option) any later version.",
+            " *",
+            " * This program is distributed in the hope that it will be useful,",
+            " * but WITHOUT ANY WARRANTY; without even the implied warranty of",
+            " * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the",
+            " * GNU General Public License for more details.",
+            " *",
+            " * You should have received a copy of the GNU General Public License",
+            " * along with this program.  If not, see <https://www.gnu.org/licenses/>.",
+            " "
+        ]]
     },
     "overrides": [
         {
