--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "devDependencies": {
         "browserify": "^16.5.2",
         "eslint": "^7.15.0",
+        "eslint-plugin-header": "^3.1.1",
         "eslint-plugin-no-unsanitized": "^3.1.4",
         "fake-indexeddb": "^3.1.2",
         "html-validate": "^4.3.0",
