Clean up translator (#1505)
* Remove unused: _removeUsedDefinitions

* Remove unused: _scoreToTermFrequency

* Remove unused: _getTermTagsScoreSum

* Add RegexUtil

* Update Translator to use RegexUtil

* Update sw.js

* Update tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -208,6 +208,7 @@
                 "ext/js/dom/simple-dom-parser.js",
                 "ext/js/general/cache-map.js",
                 "ext/js/general/object-property-accessor.js",
+                "ext/js/general/regex-util.js",
                 "ext/js/general/text-source-map.js",
                 "ext/js/language/deinflector.js",
                 "ext/js/language/dictionary-data-util.js",
