--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 *.sh text eol=lf
 *.handlebars text eol=lf
 *.js text eol=lf
+*.ts text eol=lf
 *.json text eol=lf
 *.css text eol=lf
 *.html text eol=lf
