--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     },
     "devDependencies": {
         "browserify": "^17.0.0",
+        "css": "^3.0.0",
         "eslint": "^7.29.0",
         "eslint-plugin-header": "^3.1.1",
         "eslint-plugin-no-unsanitized": "^3.1.5",
