Display pronunciation separation (#1833)
* Create PronunciationGenerator

* Update DisplayGenerator

* Update templates

* Move pronunciation styles to a separate file

* Simplify pitch-accents-preview.html

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -111,6 +111,7 @@
             "files": [
                 "ext/js/core.js",
                 "ext/js/data/anki-note-data-creator.js",
+                "ext/js/display/pronunciation-generator.js",
                 "ext/js/display/structured-content-generator.js",
                 "ext/js/dom/css-style-applier.js",
                 "ext/js/language/dictionary-data-util.js",
@@ -126,6 +127,7 @@
             "excludedFiles": [
                 "ext/js/core.js",
                 "ext/js/data/anki-note-data-creator.js",
+                "ext/js/display/pronunciation-generator.js",
                 "ext/js/display/structured-content-generator.js",
                 "ext/js/dom/css-style-applier.js",
                 "ext/js/language/dictionary-data-util.js",
@@ -158,6 +160,7 @@
                 "ext/js/core.js",
                 "ext/js/yomichan.js",
                 "ext/js/data/anki-note-data-creator.js",
+                "ext/js/display/pronunciation-generator.js",
                 "ext/js/display/structured-content-generator.js",
                 "ext/js/dom/css-style-applier.js",
                 "ext/js/language/dictionary-data-util.js",
