--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -193,6 +193,7 @@
                 "ext/js/data/json-schema.js",
                 "ext/js/data/options-util.js",
                 "ext/js/data/permissions-util.js",
+                "ext/js/data/sandbox/string-util.js",
                 "ext/js/dom/simple-dom-parser.js",
                 "ext/js/general/cache-map.js",
                 "ext/js/general/object-property-accessor.js",
