Google Docs accessibility (#1875)
* Add accessibility option for forcing Google Docs HTML-based rendering

* Update settings

* Send a documentStart message at document start

* Add accessibility script for Google Docs

* Set up accessibility

* Update tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -120,6 +120,7 @@
             "files": ["ext/**/*.js"],
             "excludedFiles": [
                 "ext/js/core.js",
+                "ext/js/document-start.js",
                 "ext/js/**/sandbox/**/*.js"
             ],
             "globals": {
@@ -146,6 +147,7 @@
             "files": ["ext/**/*.js"],
             "excludedFiles": [
                 "ext/js/core.js",
+                "ext/js/document-start.js",
                 "ext/js/yomichan.js",
                 "ext/js/**/sandbox/**/*.js"
             ],
