--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -97,7 +97,8 @@
     ],
     "optional_permissions": [
         "clipboardRead",
-        "nativeMessaging"
+        "nativeMessaging",
+        "webNavigation"
     ],
     "commands": {
         "toggleTextScanning": {
