--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -120,7 +120,7 @@
             "files": ["ext/**/*.js"],
             "excludedFiles": [
                 "ext/js/core.js",
-                "ext/js/document-start.js",
+                "ext/js/accessibility/google-docs.js",
                 "ext/js/**/sandbox/**/*.js"
             ],
             "globals": {
@@ -147,7 +147,7 @@
             "files": ["ext/**/*.js"],
             "excludedFiles": [
                 "ext/js/core.js",
-                "ext/js/document-start.js",
+                "ext/js/accessibility/google-docs.js",
                 "ext/js/yomichan.js",
                 "ext/js/**/sandbox/**/*.js"
             ],
