Update node dependencies (#2061)
* Run npm update

* Run npm audit fix

* Update eslint to 8.8.0

* Update eslint-plugin-no-unsanitized to 4.0.1

* Update html-validate to 6.2.0

* Update jsdom to 19.0.0

* Update stylelint to 14.3.0

* Update stylelint-config-recommended to 6.0.0

* Remove dead rule

* Fix rule affecting currentColor keyword

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,7 +8,6 @@
         "string-quotes": "single",
         "color-named": "never",
         "declaration-no-important": true,
-        "function-calc-no-invalid": true,
         "function-calc-no-unspaced-operator": true,
         "string-no-newline": true,
         "unit-no-unknown": true,
@@ -25,7 +24,12 @@
         "number-leading-zero": "always",
         "number-no-trailing-zeros": true,
         "unit-case": "lower",
-        "value-keyword-case": "lower",
+        "value-keyword-case": [
+            "lower",
+            {
+                "camelCaseSvgKeywords": true
+            }
+        ],
         "property-case": "lower",
         "indentation": 4,
         "max-empty-lines": 2,
