--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "sourceDir": "ext"
     },
     "devDependencies": {
+        "ajv": "^8.11.0",
         "browserify": "^17.0.0",
         "css": "^3.0.0",
         "eslint": "^8.12.0",
