--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
     },
     "plugins": [
         "no-unsanitized",
-        "header"
+        "header",
+        "jsdoc"
     ],
     "ignorePatterns": [
         "/ext/lib/"
@@ -86,6 +87,41 @@
 
         "no-unsanitized/method": "error",
         "no-unsanitized/property": "error",
+
+        "jsdoc/check-access": "error",
+        "jsdoc/check-alignment": "error",
+        "jsdoc/check-line-alignment": "error",
+        "jsdoc/check-param-names": "error",
+        "jsdoc/check-property-names": "error",
+        "jsdoc/check-tag-names": "error",
+        "jsdoc/check-types": "error",
+        "jsdoc/check-values": "error",
+        "jsdoc/empty-tags": "error",
+        "jsdoc/implements-on-classes": "error",
+        "jsdoc/multiline-blocks": "error",
+        "jsdoc/newline-after-description": ["error", "never"],
+        "jsdoc/no-bad-blocks": "error",
+        "jsdoc/no-multi-asterisks": "error",
+        "jsdoc/require-asterisk-prefix": "error",
+        "jsdoc/require-hyphen-before-param-description": ["error", "never"],
+        "jsdoc/require-jsdoc": "off",
+        "jsdoc/require-param": "error",
+        "jsdoc/require-param-description": "error",
+        "jsdoc/require-param-name": "error",
+        "jsdoc/require-param-type": "error",
+        "jsdoc/require-property": "error",
+        "jsdoc/require-property-description": "error",
+        "jsdoc/require-property-name": "error",
+        "jsdoc/require-property-type": "error",
+        "jsdoc/require-returns": "error",
+        "jsdoc/require-returns-check": "error",
+        "jsdoc/require-returns-description": "error",
+        "jsdoc/require-returns-type": "error",
+        "jsdoc/require-throws": "error",
+        "jsdoc/require-yields": "error",
+        "jsdoc/require-yields-check": "error",
+        "jsdoc/tag-lines": "error",
+        "jsdoc/valid-types": "error",
 
         "header/header": ["error", "block", [
             "",
