--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "css": "^3.0.0",
         "eslint": "^8.15.0",
         "eslint-plugin-header": "^3.1.1",
+        "eslint-plugin-jsdoc": "^39.2.9",
         "eslint-plugin-no-unsanitized": "^4.0.1",
         "fake-indexeddb": "^3.1.7",
         "html-validate": "^7.1.0",
