Audio download timeout (#2187)
* Add support for an idle timeout when downloading audio

* Update eslint rules

* Pass idleTimeout to the downloader from DisplayAnki

* Add anki.downloadTimeout setting

* Update tests

* Assign _audioDownloadIdleTimeout using settings

* Show info about cancelled downloads

* Handle Firefox bug

* Improve audio errors

* Refactor

* Move functions to RequestBuilder

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -291,6 +291,14 @@
             "rules": {
                 "no-implicit-globals": "error"
             }
+        },
+        {
+            "files": [
+                "ext/js/**/*.js"
+            ],
+            "globals": {
+                "AbortController": "readonly"
+            }
         }
     ]
 }
