--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -54,6 +54,7 @@
                 "js/comm/frame-ancestry-handler.js",
                 "js/comm/frame-client.js",
                 "js/comm/frame-offset-forwarder.js",
+                "js/data/sandbox/string-util.js",
                 "js/dom/dom-text-scanner.js",
                 "js/dom/document-util.js",
                 "js/dom/text-source-element.js",
